# random-rs

./: Cargo.toml  README.md  build.rs  flake.nix  run.sh
c-src/: random.c
common/: Cargo.toml  build.rs
common/src/: lib.rs  main.rs  random.c
privileged/: Cargo.toml
privileged/src/: main.rs
src/: lib.rs  main.rs  random.c
unprivileged/: Cargo.toml
unprivileged/src/: main.rs
