[package]
name = "random-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
sha3 = "0.10.8"
bincode = "1.3"

[build-dependencies]
cc = "1.0.81"
pkg-config = "0.3.27"
